fix: alert get's covered

--- a/client/src/styles/components/alert.module.css
+++ b/client/src/styles/components/alert.module.css
@@ -29,7 +29,7 @@
 }
 .screen-cover.active {
   opacity: 1;
-  z-index: 10000000000000;
+  z-index: 10000000000;
   transition: var(--alert-transition-duration);
 }
 
@@ -39,10 +39,10 @@
   text-align: left;
 }
 
-.alert-active {
+.custom-alert.alert-active {
   top: 20px;
   transition: var(--alert-transition-duration);
-  z-index: 10000000000001;
+  z-index: 100000000000001;
 }
 
 .alert-inactive {
